# formidable

./: ex.py  pyproject.toml
src/formidable/: __init__.py  example1.py  form.py  renderers.py  views.py
