[project]
name = "formidable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Klinger", email = "ck@novareto.de" }
]
requires-python = ">=3.12"
dependencies = [
    "dominate>=2.9.1",
    "pdbpp>=0.10.3",
    "pydantic>=2.11.1",
    "wired>=0.4",
    "autoroutes",
    "beartype",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "werkzeug>=3.1.3",
]
